--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,9 @@ inputs:
     VERSION_STATIC:
         description: Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
         required: false
+    VERSION_SUFFIX:
+        description: Append a suffix to the version.
+        required: false
     TAG_COMMIT:
         description: Flag to toggle git tagging, enabled by default
         required: false
